last last last commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.password=csedbadmin
 spring.jpa.hibernate.ddl-auto = create
 
 spring.datasource.initialization-mode=always
+
+management.endpoints.web.exposure.include=*
